<resources>
    <string name="app_name">Are We There Yet yangyi20</string>
    <string name="dummy">Dummy</string>
    <string name="provider">Provider: </string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="newLoc">New Location</string>
    <string name="newButton">NEW</string>
    <string name="eb2250">2250 Engineering</string>
    <string name="sparty">East Lansing</string>
    <string name="home">Chicago</string>
    <string name="exception">Failed to communicate with geolocation services</string>
    <string name="couldnotfind">Unable to locate address</string>
    <string name="drive">Drive</string>
    <string name="walk">Walk</string>
    <string name="biking">Bicycle</string>
</resources>